--- a/template-ssr-react/package.json
+++ b/template-ssr-react/package.json
@@ -6,15 +6,17 @@
   "scripts": {
     "dev": "node server",
     "build": "npm run build:client && npm run build:server",
-    "build:client": "vite build --ssrManifest --outDir dist/client",
-    "build:server": "vite build --ssr src/entry-server.jsx --outDir dist/server",
+    "build:client": "vite build --ssrManifest --outDir dist/client/hotel",
+    "build:server": "vite build --ssr src/entry-server.jsx --outDir dist/server/hotel",
     "preview": "cross-env NODE_ENV=production node server"
   },
   "dependencies": {
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "express": "^5.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0",
     "sirv": "^3.0.0"
   },
   "devDependencies": {
